--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource/aldrich": "^5.0.18",
+		"@fontsource/roboto": "^5.0.8"
+	}
 }
