--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/aldrich": "^5.0.18",
+		"@fontsource/m-plus-rounded-1c": "^5.0.11",
 		"@fontsource/roboto": "^5.0.8"
 	}
 }
